# Nullix-dev

./: .gitignore  CMakeLists.txt  globals.hpp
diagnostics/: Diagnostics.hpp
errika/: errika.hpp
errika/include/error/: error.hpp  error_details.hpp
errika/source/error/: error.cpp  error_details.cpp
nullix/: nullix.hpp
nullix/include/: argsparser.hpp  gbls.hpp  x.cpp
nullix/include/backlight/: Backlight.hpp
nullix/include/diagnostics/: error.hpp
nullix/include/generator/: generator.hpp
nullix/include/host/: host.hpp
nullix/source/backlight/: Backlight.cpp
nullix/source/diagnostics/: error.cpp
nullix/source/generator/: generator.cpp
nullix/source/host/: host.cpp
uniqx/: uniqx.hpp
uniqx/include/file_tree/: PathProxy.hpp
uniqx/include/filesystem/: FileTree.hpp  Path.hpp
uniqx/include/sys_proc/: Result.hpp  SysProc.hpp  UniqxPd.hpp  UniqxPipe.hpp
uniqx/include/system/file_tree/: FileTree.hpp  PathProxy.hpp
uniqx/include/system/process/: ProcResult.hpp  ProcStream.hpp  SubProcess.hpp
uniqx/include/system/process/sub_process/: SubProcess.hpp
uniqx/source/filesystem/: FileTree.cpp  Path.cpp
uniqx/source/sys_proc/: Result.cpp  SysProc.cpp  UniqxPd.cpp  UniqxPipe.cpp
uniqx/source/system/file_tree/: FileTree.cpp  PathProxy.cpp
uniqx/source/system/process/: ProcPd.cpp  ProcPipe.cpp  ProcStream.cpp  SubProcess.cpp
uniqx/source/system/process/sub_process/: SubProcess.cpp  UniqxPd.cpp
